--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,15 @@
     },
     "require": {
         "php": ">=8.1",
-        "hyperf/database": "~3.1.0"
+        "hyperf/database": "^3.1",
+        "hyperf/db-connection": "^3.1"
+    },
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.0",
+        "mockery/mockery": "^1.0",
+        "phpstan/phpstan": "^1.0",
+        "phpunit/phpunit": "^10.0",
+        "swoole/ide-helper": "dev-master"
     },
     "autoload": {
         "psr-4": {
@@ -37,5 +45,10 @@
         "hyperf": {
             "config": "Hyperf\\Database\\Sqlsrv\\ConfigProvider"
         }
+    },
+    "scripts": {
+        "test": "phpunit -c phpunit.xml --colors=always",
+        "analyse": "phpstan analyse --memory-limit 1024M -l 0 ./src",
+        "cs-fix": "php-cs-fixer fix $1"
     }
 }
